Integrating our database

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 
 # testing
 /coverage
+.vscode
 
 # next.js
 /.next/
@@ -16,6 +17,7 @@
 /build
 
 # misc
+.idea
 .DS_Store
 *.pem
 
@@ -27,6 +29,7 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env
 
 # vercel
 .vercel
